--- a/public/SellerUI.html
+++ b/public/SellerUI.html
@@ -5,88 +5,64 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Seller Management</title>
   <link rel="stylesheet" href="CSS_Files/SellerUI.css">
-
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
-
-
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-  
-    <!-- Firebase initialization script -->
-    <script src="scripts/firebaseInit.js"></script>
-  
+  <script src="scripts/firebaseInit.js"></script>
   <script src="scripts/SellerUI.js"></script>
   <script src="scripts/Logout.js"></script>
   <script src="scripts/scrollSellerUI.js"></script>
   <script src="scripts/displaySales.js"></script>
-
   <script src="scripts/authCheckSeller.js"></script>
-
 </head>
 <body>
-  <button type="logoutbutton" onclick="logout()" class="logout-btn">Logout</button>
-
+  <button type="button" onclick="logout()" class="logout-btn">Logout</button>
   <div class="seller_Header">
     <p id="storeName">Welcome</p>
   </div>
-  <!--        FOR SCROLLING BUTTONS         -->
   <div class="fixed-btn-container">
     Navigate
     <button onclick="scrollToSection('add_container')" class="fixed-btn">Add Product</button>
     <button onclick="scrollToSection('sales_container')" class="fixed-btn">Sales</button>
   </div>
-  
-<div class="parent_container">
-  <div class="container" id="add_container">
-    <h1>Add New Product</h1>
-    <form id="addItemForm"> 
-        <input type="hidden" id="productId"> <!-- Hidden field to store the product ID for editing -->
+  <div class="parent_container">
+    <div class="container" id="add_container">
+      <h1>Add New Product</h1>
+      <form id="addItemForm">
+        <input type="hidden" id="productId">
         <input type="text" id="productName" placeholder="Product Name" required>
         <textarea id="productDesc" placeholder="Product Description" required></textarea>
         <input type="number" id="productPrice" placeholder="Product Price" required>
         <input type="number" id="productStock" placeholder="Product Stock" required>
         <input type="file" id="productImage">
         <button type="submit" class="submit-btn">Add Product</button>
-    </form>
-    <div id="progress"></div>
-
-      
-      
-</div>
-
-  <div class="product_container" id="product_list">
-    <h2>Product List</h2>
-    <div id="productList" class="product-list"></div>
-    <div id="pagination" class="pagination"></div> <!-- Add pagination controls -->
-
+      </form>
+      <div id="progress"></div>
+    </div>
+    <div class="product_container" id="product_list">
+      <h2>Product List</h2>
+      <div id="productList" class="product-list"></div>
+      <div id="pagination" class="pagination"></div>
+    </div>
   </div>
-</div>
-
-<div class="sales_container" id="sales_container">
+  <div class="sales_container" id="sales_container">
     <h1>Sales</h1>
     <table id="salesTable" class="sales-table">
       <thead>
-          <tr>
-              <th>Product Name</th>
-              <th>Quantity</th>
-              <th>Total</th>
-              <th>Date</th>
-          </tr>
+        <tr>
+          <th>Product Name</th>
+          <th>Quantity</th>
+          <th>Total</th>
+          <th>Date</th>
+        </tr>
       </thead>
       <tbody id="salesList">
-          <!-- Sales data will be populated here -->
       </tbody>
-  </table>
-</div>
-
-
-
-
-  
-
+    </table>
+  </div>
 </body>
 </html>
